# irrlamb

./: .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  README
assets/art/: README
assets/meshes/: cylinder.blend  cylinder_tall.blend  disc.blend  drum.blend  plane.blend  shaker.blend  skate_corkscrew.blend  skate_quarterpipe1.blend  soccer.blend
assets/scenes/: c_roll0.blend  c_sinkhole0.blend  c_trees0.blend  caves_0.blend  caves_1.blend  caves_2.blend  caves_3.blend  caves_4.blend  caves_5.blend  caves_6.blend  house.blend  sas_0.blend  skate_0.blend  skate_1.blend  skate_2.blend  skate_3.blend  test.blend  tut_corkscrew0.blend  tut_cylinder0.blend  tut_cylinder1.blend  tut_hill0.blend  tut_jump0.blend  tut_jump1.blend  tut_jump2.blend  tut_jump3.blend  tut_jump4.blend  tut_kick0.blend  tut_longjump0.blend  tut_move0.blend  tut_move1.blend  tut_move2.blend  tut_sphere0.blend
assets/textures/: book0.svgz  cereal0.svgz  pizza0.xcf  remote0.svgz  shaker0.svgz
cmake/: FindLua.cmake
deployment/: build_mingw.sh  install-win.nsi  irrlamb.desktop  make_src.sh
src/: actions.cpp  actions.h  audio.cpp  audio.h  camera.cpp  camera.h  campaign.cpp  campaign.h  config.cpp  config.h  constants.h  database.cpp  database.h  fader.cpp  fader.h  filestream.cpp  filestream.h  framework.cpp  framework.h  game.cpp  game.h  globals.cpp  globals.h  graphics.cpp  graphics.h  input.cpp  input.h  interface.cpp  interface.h  level.cpp  level.h  log.cpp  log.h  main.cpp  menu.cpp  menu.h  null.cpp  null.h  objectmanager.cpp  objectmanager.h  (+14 more)
src/bullet/BulletWorldImporter/: btBulletWorldImporter.cpp  btBulletWorldImporter.h
src/engine/: actions.cpp  actions.h  audio.cpp  audio.h  camera.cpp  camera.h  campaign.cpp  campaign.h  config.cpp  config.h  constants.h  database.cpp  database.h  fader.cpp  fader.h  filestream.cpp  filestream.h  game.cpp  game.h  globals.cpp  globals.h  graphics.cpp  graphics.h  input.cpp  input.h  interface.cpp  interface.h  level.cpp  level.h  log.cpp  log.h  objectmanager.cpp  objectmanager.h  physics.cpp  physics.h  random.cpp  random.h  replay.cpp  replay.h  save.cpp  (+4 more)
src/font/: CGUITTFont.cpp  irrUString.h
src/irrb/: CIrrBMeshFileLoader.cpp  CIrrBMeshFileLoader.h  CIrrBMeshWriter.cpp
src/irrlicht/: BuiltInFont.h  CAttributeImpl.h  CBillboardSceneNode.h  CBlit.h  CBurningShader_Raster_Reference.cpp  CCameraSceneNode.h  CDefaultSceneNodeAnimatorFactory.h  CDefaultSceneNodeFactory.h  CFPSCounter.cpp  CFileSystem.cpp  CGUIButton.cpp  CGUIImageList.h  CGUIListBox.cpp  CIrrDeviceLinux.cpp  CLightSceneNode.h  CMeshManipulator.cpp  CMeshManipulator.h  COpenGLDriver.cpp  COpenGLMaterialRenderer.h  COpenGLSLMaterialRenderer.h  CSceneManager.cpp  CShadowVolumeSceneNode.h  CTRTextureLightMap2_M1.cpp  CTRTextureLightMap2_M2.cpp  CTRTextureLightMap2_M4.cpp  CTRTextureWire2.cpp  CTerrainSceneNode.h  CXMLReader.cpp  CXMLReaderImpl.h  CXMLWriter.cpp  SoftwareDriver2_helper.h  clean.sh  irrXML.cpp  resource.h
src/irrlicht/include/: ICameraSceneNode.h  IColladaMeshWriter.h  IGUIElement.h  IGUIEnvironment.h  IMeshManipulator.h  ISceneNode.h  ISceneNodeAnimatorCameraFPS.h  IrrCompileConfig.h  SColor.h  SMaterial.h  irrXML.h  matrix4.h
src/objects/: box.cpp  box.h  collision.cpp  collision.h  constraint.cpp  constraint.h  cylinder.cpp  cylinder.h  object.cpp  object.h  orb.cpp  orb.h  plane.cpp  plane.h  player.cpp  player.h  sphere.cpp  sphere.h  springjoint.cpp  springjoint.h  template.cpp  template.h  terrain.cpp  terrain.h  trimesh.cpp  trimesh.h  zone.cpp  zone.h
src/ode/src/: collision_trimesh_internal.cpp  config.h  matrix.h  odeou.cpp  odeou.h  threading_pool_win.cpp
src/ou/: atomic.cpp  atomic.h  atomicflags.h  customization.h  enumarrays.h  malloc.cpp  simpleflags.h  threadlocalstorage.cpp  threadlocalstorage.h
src/states/: null.cpp  null.h  play.cpp  play.h  viewreplay.cpp  viewreplay.h
tools/colmesh/: main.cpp
working/: move.sh
working/levels/: main.xml
working/levels/c_acrobatics0/: c_acrobatics0.irr  c_acrobatics0.lua  c_acrobatics0.xml
working/levels/c_cubism0/: c_cubism0.irr  c_cubism0.lua  c_cubism0.xml
working/levels/c_roll0/: c_roll0.col  c_roll0.lua  c_roll0.xml
working/levels/c_seesaw0/: c_seesaw0.irr  c_seesaw0.lua  c_seesaw0.xml
working/levels/c_sinkhole0/: c_sinkhole0.col  c_sinkhole0.irr  c_sinkhole0.lua  c_sinkhole0.xml
working/levels/c_tightrope0/: c_tightrope0.irr  c_tightrope0.lua  c_tightrope0.xml
working/levels/c_trees0/: c_trees0.col  c_trees0.irr  c_trees0.lua  c_trees0.xml
working/levels/caves_0/: caves_0.col  caves_0.irr  caves_0.lua  caves_0.xml
working/levels/caves_1/: caves_1.col  caves_1.irr  caves_1.lua  caves_1.xml
working/levels/caves_2/: caves_2.col  caves_2.irr  caves_2.lua  caves_2.xml
working/levels/caves_3/: caves_3.col  caves_3.irr  caves_3.lua  caves_3.xml
working/levels/caves_4/: caves_4.col  caves_4.irr  caves_4.lua  caves_4.xml  caves_4a.col  caves_4b.col  caves_4static.col
working/levels/caves_5/: caves_5.col  caves_5.irr  caves_5.lua  caves_5.xml
working/levels/caves_6/: caves_6.col  caves_6.irr  caves_6.lua  caves_6.xml
working/meshes/: alan.irrbmesh  bathtub.irrbmesh  c_sinkhole0.irrbmesh  c_trees0.water.irrbmesh  caves_0.irrbmesh  caves_1.irrbmesh  caves_2.irrbmesh  caves_3.irrbmesh  caves_4.irrbmesh  caves_4a.irrbmesh  caves_4b.irrbmesh  caves_4static.irrbmesh  caves_5.irrbmesh  caves_6.irrbmesh  cylinder.irrbmesh  cylinder_tall.irrbmesh  disc.irrbmesh  drum.irrbmesh  house_bedroom.irrbmesh  house_bedroom_screen.irrbmesh  house_bedroom_window.irrbmesh  house_hallway.irrbmesh  house_kitchen.irrbmesh  house_kitchen_window.irrbmesh  house_laundry.irrbmesh  house_main.irrbmesh  house_main_screen.irrbmesh  house_main_window.irrbmesh  house_mainbath.irrbmesh  house_master.irrbmesh  house_master_screen.irrbmesh  house_master_window.irrbmesh  house_masterbath.irrbmesh  house_stairs.irrbmesh  plane.irrbmesh  shaker.irrbmesh  skate_2.irrbmesh  skate_3.irrbmesh  skate_corkscrew.irrbmesh  skate_corner0.irrbmesh  (+18 more)
working/shaders/: lighting.frag  lighting.vert  single_light.frag
(+91 files in other folders)
